feat: add --fullchain-file to deploy args

--- a/tasks/cert.yml
+++ b/tasks/cert.yml
@@ -14,6 +14,7 @@
     --dnssleep "{{ letsencrypt_acmesh_dnssleep }}"
     {% if letsencrypt_acmesh_cert.deploy_path is defined %}--cert-file {{ letsencrypt_acmesh_cert.deploy_path }}/{{ letsencrypt_acmesh_cert.domains[0] }}.cert{% endif %} 
     {% if letsencrypt_acmesh_cert.deploy_path is defined %}--key-file {{ letsencrypt_acmesh_cert.deploy_path }}/{{ letsencrypt_acmesh_cert.domains[0] }}.key{% endif %} 
+    {% if letsencrypt_acmesh_cert.deploy_path is defined %}--fullchain-file {{ letsencrypt_acmesh_cert.deploy_path }}/{{ letsencrypt_acmesh_cert.domains[0] }}.fullchain{% endif %} 
     {{ letsencrypt_acmesh_issue_args }}
   become: yes
   become_user: "{{ letsencrypt_acmesh_user }}"
