--- a/tasks/cert.yml
+++ b/tasks/cert.yml
@@ -10,8 +10,8 @@
     {% if letsencrypt_acmesh_env %}{{ letsencrypt_acmesh_env }}{% endif %}
     {{ letsencrypt_acmesh_install_path }}/acme.sh --issue
     {% if letsencrypt_acmesh_cert.args %}{{ letsencrypt_acmesh_cert.args }}{% endif %}
-    {% for domain in letsencrypt_acmesh_cert.domains %} -d {{ domain }}{% endfor %}
-    --dnssleep "{{ letsencrypt_acmesh_dnssleep }}"
+    {% for domain in letsencrypt_acmesh_cert.domains %} -d '{{ domain }}'{% endfor %}
+    --dnssleep '{{ letsencrypt_acmesh_dnssleep }}'
     {% if letsencrypt_acmesh_cert.deploy_path is defined %}--cert-file {{ letsencrypt_acmesh_cert.deploy_path }}/{{ letsencrypt_acmesh_cert.domains[0] }}.cert{% endif %} 
     {% if letsencrypt_acmesh_cert.deploy_path is defined %}--key-file {{ letsencrypt_acmesh_cert.deploy_path }}/{{ letsencrypt_acmesh_cert.domains[0] }}.key{% endif %} 
     {% if letsencrypt_acmesh_cert.deploy_path is defined %}--fullchain-file {{ letsencrypt_acmesh_cert.deploy_path }}/{{ letsencrypt_acmesh_cert.domains[0] }}.fullchain{% endif %} 
