--- a/tasks/cert.yml
+++ b/tasks/cert.yml
@@ -5,19 +5,23 @@
     state: directory
   when: letsencrypt_acmesh_cert.deploy_path is defined
 
-- name: "{{ letsencrypt_acmesh_cert.domains[0] }} : Issue certificate"
-  shell: >
-    {% if letsencrypt_acmesh_env %}{{ letsencrypt_acmesh_env }}{% endif %}
-    {{ letsencrypt_acmesh_install_path }}/acme.sh --issue
-    {% if letsencrypt_acmesh_cert.args %}{{ letsencrypt_acmesh_cert.args }}{% endif %}
-    {% for domain in letsencrypt_acmesh_cert.domains %} -d '{{ domain }}'{% endfor %}
-    --dnssleep '{{ letsencrypt_acmesh_dnssleep }}'
-    {% if letsencrypt_acmesh_cert.deploy_path is defined %}
-    --cert-file {{ letsencrypt_acmesh_cert.deploy_path }}/{{ letsencrypt_acmesh_cert.domains[0] }}.cert 
-    --key-file {{ letsencrypt_acmesh_cert.deploy_path }}/{{ letsencrypt_acmesh_cert.domains[0] }}.key 
-    --fullchain-file {{ letsencrypt_acmesh_cert.deploy_path }}/{{ letsencrypt_acmesh_cert.domains[0] }}.fullchain
-    {% endif %} 
-    {{ letsencrypt_acmesh_issue_args }}
+- name: Define issue command
+  set_fact:
+    letsencrypt_acmesh_issue_command: >
+      {% if letsencrypt_acmesh_env %}{{ letsencrypt_acmesh_env }}{% endif %}
+      {{ letsencrypt_acmesh_install_path }}/acme.sh --issue
+      {% if letsencrypt_acmesh_cert.args %}{{ letsencrypt_acmesh_cert.args }}{% endif %}
+      {% for domain in letsencrypt_acmesh_cert.domains %} -d '{{ domain }}'{% endfor %}
+      --dnssleep '{{ letsencrypt_acmesh_dnssleep }}'
+      {% if letsencrypt_acmesh_cert.deploy_path is defined %}
+      --cert-file {{ letsencrypt_acmesh_cert.deploy_path }}/{{ letsencrypt_acmesh_cert.domains[0] }}.cert
+      --key-file {{ letsencrypt_acmesh_cert.deploy_path }}/{{ letsencrypt_acmesh_cert.domains[0] }}.key
+      --fullchain-file {{ letsencrypt_acmesh_cert.deploy_path }}/{{ letsencrypt_acmesh_cert.domains[0] }}.fullchain
+      {% endif %} 
+      {{ letsencrypt_acmesh_issue_args }}
+
+- name: "{{ letsencrypt_acmesh_cert.domains[0] }} : Issue certificate: {{ letsencrypt_acmesh_issue_command }}"
+  shell: "{{ letsencrypt_acmesh_issue_command }}"
   become: yes
   become_user: "{{ letsencrypt_acmesh_user }}"
   failed_when: result.rc != 0 and result.rc != 2 # 2 - RENEW_SKIP
